@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Update remote Moneris test to ensure using a verification value doesn't break anything [cody]
+#
 # * Fix Solo issue number with CardStream gateway and improve test coverage [code]
 #
 # * Add CardStream gateway [Jonah Fox, Thomas Nichols, cody]
